[package]
name = "path"
version = "1.0.0"
edition = "2024"
authors = ["Adrian Calavie <adrian.calavie06@gmail.com>"]
description = "A CLI tool for getting the full path of a file"
license = "MIT"
repository = "https://github.com/adriancalavie/path"
keywords = ["cli", "path", "filesystem", "uri"]
categories = ["command-line-utilities"]

[[bin]]
name = "path"
path = "src/main.rs"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
